gcp-kcc-ilb-https-redirect/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-svc
  template:
    metadata:
      labels:
        app: http-svc
    spec:
      containers:
      - name: http-svc
        image: k8s.gcr.io/e2e-test-images/echoserver:2.3
        ports:
        - containerPort: 8080
