gcp-kcc-ilb-https-redirect/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-svc
  labels:
    app: http-svc
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: http-svc
